# Author: Ramon Casero <rcasero@gmail.com>
# Copyright © 2011 University of Oxford
# Version: 0.6.1
# $Rev$
# $Date$
#
# University of Oxford means the Chancellor, Masters and Scholars of
# the University of Oxford, having an administrative office at
# Wellington Square, Oxford OX1 2JD, UK. 
#
# This file is part of Gerardus.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details. The offer of this
# program under the terms of the License is subject to the License
# being interpreted in accordance with English Law and subject to any
# action against the University of Oxford being under the jurisdiction
# of the English Courts.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see
# <http://www.gnu.org/licenses/>.

# add Boost include and linking paths
include_directories(${Boost_INCLUDE_DIRS})
link_directories(${Boost_LIBRARY_DIRS})

################################################################
## itk_imfilter()
################################################################

ADD_MEX_FILE(itk_imfilter 
  ../MatlabImageHeader.cxx
  ItkImFilter.cpp)

INCLUDE_DIRECTORIES(
  ..
  ${GERARDUS_SOURCE_DIR}/include
  ${GERARDUS_SOURCE_DIR}/cpp/src/third-party/CGAL-4.2/include
  ${GERARDUS_SOURCE_DIR}/cpp/src/third-party/IJ-Vessel_Enhancement_Diffusion.1
  ${GERARDUS_SOURCE_DIR}/cpp/src/third-party/itkBinaryThinningImageFilter3D/Source
  )
TARGET_LINK_LIBRARIES(itk_imfilter
  CGAL
  ${ITK_LIBRARIES})

# add dependency to compiler_config.h, a header file generated by CGAL
# and only available once CGAL has installed
add_dependencies(itk_imfilter copy_compiler_config.h)

################################################################
## itk_pstransform
################################################################

ADD_MEX_FILE(itk_pstransform ItkPSTransform.cpp)
TARGET_LINK_LIBRARIES(itk_pstransform
  ${ITK_LIBRARIES})

################################################################
## installation of targets
################################################################

IF(WIN32)
  INSTALL(TARGETS
    itk_imfilter
    itk_pstransform
    RUNTIME
    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
ELSE(WIN32)
  INSTALL(TARGETS
    itk_imfilter
    itk_pstransform
    LIBRARY
    DESTINATION ${CMAKE_CURRENT_SOURCE_DIR})
ENDIF(WIN32)
